# BUCKET

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  benchmarks.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  main.cpp
include/bucket/: bucket.hpp  new.hpp
resources/: results.csv  results_b.csv  results_c.csv
tests/: CMakeLists.txt  testA.cpp  test_concepts.cpp
